# elfmsg

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: todo-implementation.md
core-server/: .gitignore  Cargo.toml
core-server/migrations/: 0001_create_table_users.sql  0001_user_table.sql  0002_test_user.sql
core-server/src/: auth.rs  config.rs  lib.rs  main.rs
core-server/src/api/: mod.rs
web/: .gitignore  package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/src/: index.ts  index.tsx  styles.css
web/src/auth/: auth.tsx  login.tsx  sign-up.tsx
