[package]
name = "elfmsg"
version = "0.0.1"
edition = "2021"

[lib]
name = "elfmsg"
path = "src/lib.rs"

[[bin]]
name = "elfmsg-server"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
toml = "0.8"
serde = "1.0"
tracing = "0.1"
